# curse_dim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang_ub.sh  clang_version.txt  gcc_ub.sh  gcc_version.txt  make_no_ub  make_no_ub.sh  make_ub  make_ub.sh
bellman/: CMakeLists.txt
bellman/cpp/: particle.cpp
bellman/cpp/bellman_operators/: abstract_bellman.cpp  environment.cpp  qfunc.cpp  stationary_operator.cpp  uniform_operator.cpp
bellman/cpp/density_estimators/: stationary_estimator.cpp
bellman/include/bellman/: abstract_kernel.hpp  bellman.hpp  builder.hpp  cloneable.hpp  contiguous_iterator.hpp  exceptions.hpp  initializer.hpp  kernel.hpp  memory_view.hpp  named_value.hpp  particle.hpp  pimpl_ptr.hpp  threading.hpp  types.hpp
bellman/include/bellman/bellman_operators/: abstract_bellman.hpp  environment.hpp  qfunc.hpp  stationary_operator.hpp  uniform_operator.hpp
bellman/include/bellman/density_estimators/: stationary_estimator.hpp  weighted_particle_clusters.hpp
bellman/tests/: bellman.cpp  storage.cpp  type_traits.cpp  ub_example.cpp  uniform_operator_build.cpp
bellman/ub_example/: ub_example.cpp
cpp/: experiment.cpp  experiment_printer.cpp  main.cpp  particle.cpp  pendulum.cpp  random_experiment.cpp  stationary_experiment.cpp  uniform_experiment.cpp
cpp/bellman_operators/: abstract_bellman.cpp  environment.cpp  qfunc.cpp  stationary_operator.cpp  uniform_operator.cpp
cpp/density_estimators/: stationary_estimator.cpp
include/: abstract_kernel.hpp  agent_policy.hpp  bellman.hpp  cloneable.hpp  contiguous_iterator.hpp  exceptions.hpp  initializer.hpp  kernel.hpp  matrix.hpp  memory_view.hpp  named_value.hpp  particle.hpp  particle_storage.hpp  qfunc.hpp  type_traits.hpp  types.hpp  util.hpp
include/bellman_operators/: abstract_bellman.hpp  environment.hpp  qfunc.hpp  stationary_operator.hpp  uniform_operator.hpp
include/curse_dim/: exceptions.hpp  experiment.hpp  experiment_printer.hpp  pendulum.hpp  random_experiment.hpp  stationary_experiment.hpp  throw_helpers.hpp  uniform_experiment.hpp
include/density_estimators/: stationary_estimator.hpp  weighted_particle_clusters.hpp
main/: experiment.cpp  experiment.hpp  main.cpp  pendulum.cpp  pendulum.hpp  uniform_experiment.cpp  uniform_experiment.hpp
main/main_includes/: experiment.hpp  pendulum.hpp  uniform_experiment.hpp
main/main_sources/: experiment.cpp  pendulum.cpp  uniform_experiment.cpp
src/: abstract_kernel.hpp  agent_policy.hpp  bellman.hpp  cloneable.hpp  contiguous_iterator.hpp  exceptions.hpp  initializer.hpp  kernel.hpp  main.cpp  memory_view.hpp  particle.hpp  particle_storage.hpp  type_traits.hpp  util.hpp
src/bellman_operators/: abstract_bellman.hpp  environment.hpp  qfunc.hpp  stationary_operator.hpp  uniform_operator.hpp
src/density_estimators/: stationary_estimator.hpp  weighted_particle_clusters.hpp
tests/: bellman.cpp  main.cpp  pendulum_kernel.cpp  storage.cpp  tests.cpp  type_traits.cpp  uniform_operator_build.cpp
ub/: CMakeCache.txt  Makefile  cmake_install.cmake  ub_example
ub_example/: ub_example.cpp
